--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse id recusandae omnis non labore animi eligendi ipsum? Amet voluptas ad, corporis a maxime iusto animi illum nihil natus? Aut, laudantium.</p>
 </body>
 </html>
